# Piatra_Foarfeca_Foaie

./: .gitignore  AsciiRenderer.cpp  AsciiRenderer.hpp  Build.bat  CMakeLists.txt  Choice.cpp  Choice.hpp  Computer.cpp  Computer.hpp  Engine.cpp  Engine.hpp  HumanPlayer.cpp  HumanPlayer.hpp  Main.cpp  Player.cpp  Player.hpp  README.md  Render.cpp  test.cpp
